--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,440 @@
-.App {
-  text-align: center;
+div.wrapper {
+  min-width: 900px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* main */
+  div.main_container {
+    clip-path: polygon(50% 95%, 100% 80%, 100% 0, 0 0, 0 80%);
+    background-color: #e44458;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    position: relative;
+    margin-bottom: 200px;
+    word-break: keep-all;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  div.main_container h1 {
+    font-weight: normal;
+    position: relative;
   }
-  to {
-    transform: rotate(360deg);
+  div.main_container h1:first-child:before {
+    content: '';
+    background: url(../public/ico/star_big.png) no-repeat center/contain;
+    width: 50px; height: 50px;
+    position: absolute;
+    top: -40px; right: -60px;
   }
-}
+  div.main_container h1:first-child:after {
+    content: '';
+    background: url(../public/ico/star_small.png) no-repeat center/contain;
+    width: 20px; height: 20px;
+    position: absolute;
+    top: 0; right: -70px;
+  }
+  div.main_container span:before {
+    content: '';
+    background: url(../public/ico/star_medium.png) no-repeat center/contain;
+    width: 40px; height: 40px;
+    position: absolute;
+    bottom: -20px; left: -80px;
+  }
+  div.main_container span:after {
+    content: '';
+    background: url(../public/ico/star_small.png) no-repeat center/contain;
+    width: 20px; height: 20px;
+    position: absolute;
+    bottom: -30px; left: -95px;
+  }
+  div.main_container span {
+    font-size: 40px;
+    margin-right: 8px;
+  }
+  div.scroll {
+    color: #ff8f97;
+    position: absolute;
+    bottom: 50px;
+  }
+  div.scroll p {
+    margin-bottom: 5px;
+  }
+
+/* intro */
+  div.intro {
+    font-size: 25px;
+    text-align: center;
+    margin-bottom: 200px;
+  }
+
+/* skills */
+  div.skills_container {
+    background-color: #2e2264;
+    padding: 6%;
+    position: relative;
+    margin-bottom: 200px;
+  }
+  div.skills_container h2 {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 35px;
+    background-color: #150640;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%; transform: translateX(-50%);
+    top: -35px;
+  }
+  div.skills_container h3 {
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+  div.skills_container div.skills_area {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    flex-wrap: wrap;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+  div.skills_container div.skillbox {
+    padding: 20px;
+    box-sizing: border-box;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  div.skills_container div.skillbox:nth-child(n+3) {
+    border-top: 1px solid rgba(252, 251, 247, 0.5);
+  }
+  div.skills_container div.quarter {
+    width: 45%;
+  }
+  div.skills_container div.half {
+    width: 100%;
+    justify-content: space-between;
+  }
+  div.skills_container div.img_container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  div.skills_container div.img_area {
+    text-align: center;
+    position: relative;
+  }
+  div.skills_container img {
+    height: 60px;
+    margin: 10px;
+  }
+  div.skills_container div.img_area p.skill_name {
+    background-color: rgba(0, 0, 0, 0.75);
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 15px;
+    border-radius: 10px;
+    opacity: 0;
+    transition: .3s all;
+  }
+  div.skills_container div.img_area:hover p.skill_name {
+    opacity: 1;
+  }
+
+/* links */
+  div.links {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 2px solid #fcfbf7;
+    border-bottom: 2px solid #fcfbf7;
+    margin-bottom: 100px;
+  }
+  div.links div.link {
+    width: 50%;
+    padding: 100px 60px;
+    text-align: right;
+  }
+  div.links > div+div {
+    border-left: 1px solid rgba(252, 251, 248, 1)
+  }
+  div.links div.link h2 {
+    padding-bottom: 20px;
+    font-size: 35px;
+    line-height: 1.4;
+    height: 118px;
+  }
+  div.links div.link svg {
+    height: 60px;
+    padding-top: 80px;
+  }
+
+/* Navbar */
+  div.gnb {
+    background-color: #F1E6E0;
+  }
+  div.gnb ul.pc {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  div.gnb ul.pc li {
+    width: calc(100%/5);
+    color: #ff8f97;
+    font-size: 20px;
+    box-sizing: border-box;
+  }
+  div.gnb ul li a {
+    padding: 10px 20px;
+    box-sizing: border-box;
+  }
+  div.gnb ul li h1 {
+    color: #e44458;
+    word-break: keep-all;
+    font-size: 25px;
+  }
+  div.gnb ul.pc li h1 span {
+    font-size: 22px;
+    margin-left: 5px;
+  }
+
+/* card */
+  div.card_container {
+    background-color: #2e2264;
+    padding: 6%;
+    position: relative;
+    margin-bottom: 200px;
+    margin-top: 100px;
+  }
+  div.card_container h2 {
+    display: inline-block;
+    padding: 15px 30px;
+    font-size: 35px;
+    background-color: #150640;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%; transform: translateX(-50%);
+    top: -35px;
+  }
+  div.designcard_area {
+    display: flex;
+    justify-content: space-between;
+  }
+  div.designcard > img {
+    border-radius: 20px;
+    width: 95%;
+    margin-top: 30px;
+    cursor: pointer;
+  }
+
+/* modal */
+  div.designmodal_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    position: fixed;
+    height: 95vh;
+    width: calc(100% - 100px);
+    background-color: #FE8F96;
+    padding: 30px;
+    box-sizing: border-box;
+    top: 50%;
+    left: 50%; transform: translate(-50%, -50%);
+    border-radius: 20px;
+  }
+  div.designmodal_container div.img_area {
+    max-width: 60%;
+    max-height: 100%;
+    overflow: hidden;
+    border-radius: 15px;
+  }
+  div.designmodal_container div.img_area > img {
+    width: 100%;
+  }
+  div.designmodal_container div.text_area {
+    width: 40%;
+    padding: 50px;
+    position: relative;
+  }
+  div.designmodal_container > svg {
+    font-size: 40px;
+    position: absolute;
+    top: 30px; right: 30px;
+    cursor: pointer
+  }
+  div.designmodal_container div.text_area h3.title {
+    font-size: 30px;
+  }
+  div.designmodal_container div.text_area p.desc {
+    font-family: "Pretendatd Variable";
+    font-size: 17px;
+  }
+
+/* web dev card */
+  div.webdevcard {
+    padding: 40px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin-bottom: 20px;
+    height: 380px;
+    max-width: 900px;
+    margin: 0 auto;
+  }
+  div.webdevcard+div.webdevcard {
+    border-top: 1px solid rgba(252, 251, 247, 0.5);
+    padding-top: 40px;
+  }
+  div.webdevcard div.img_area {
+    height: 100%;
+    width: 40%;
+    overflow: hidden;
+    border-radius: 15px;
+  }
+  div.webdevcard img {
+    width: 100%;
+    border-radius: 15px;
+  }
+  div.webdevcard div.text_area {
+    width: 60%;
+    padding: 10px 40px;
+    box-sizing: border-box;
+    position: relative;
+    height: 100%;
+    word-break: keep-all;
+  }
+  div.webdevcard div.text_area div.title_area {
+    display: flex;
+    justify-content: start;
+    flex-wrap: wrap;
+    align-items: baseline;
+    font-size: 30px;
+    color:#e44458;
+    font-weight: normal;
+  }
+  div.webdevcard div.text_area div.title_area h3 {
+    margin-right: 15px;
+  }
+  div.webdevcard div.text_area div.title_area span {
+    font-size: 20px;
+    color:#ff8f96;
+    font-family: "Pretendard Variable";
+    font-weight: 600;
+  }
+  div.webdevcard div.text_area div.desc {
+    line-height: 1.5;
+    font-size: 19px;
+  }
+  div.webdevcard div.text_area div.btn_area {
+    position: absolute;
+    bottom: 0;
+    font-family: "Pretendard Variable";
+  }
+  div.webdevcard div.text_area div.btn_area button {
+    padding: 12px 30px;
+    font-size: 19px;
+    font-weight: 700;
+    border-radius: 5px;
+  }
+  div.webdevcard div.text_area div.btn_area button:first-child {
+    background-color: #ff8f96;
+    color: white;
+    margin-right: 20px;
+  }
+  div.webdevcard div.text_area div.btn_area button:first-child:hover {
+    background-color: #f2888f;
+  }
+  div.webdevcard div.text_area p.version {
+    margin-bottom: 5px;
+    font-size: 18px;
+    font-family: "Pretendard Variable";
+    font-weight: 600;
+  }
+  div.webdevcard div.text_area p.desc {
+    font-family: "Pretendard Variable";
+    font-size: 17px;
+  }
+  div.webdevcard div.text_area p.desc > span {
+    display: block;
+    margin-top: 5px;
+    font-weight: 500;
+  }
+
+/* contact */
+  div.profile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 500px;
+    margin: 0 auto;
+    background-color: #44358e;
+    border-radius: 20px;
+    margin-top: 40px;
+    padding: 20px 30px;
+    box-sizing: border-box;
+  }
+  div.profile img {
+    width: 150px; height: 150px;
+    border-radius: 150px;
+  }
+  div.profile div.text_area {
+    font-size: 20px;
+    font-family: "Pretendard Variable";
+  }
+  div.profile div.text_area p.name {
+    font-size: 25px;
+    margin-bottom: 5px;
+    font-family: "Tenada";
+  }
+  div.contact form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 40px;
+  }
+  div.contact form div.email {
+    margin-bottom: 20px;
+    font-family: "Pretendard Variable";
+  }
+  div.contact form div.email label {
+    width: 120px;
+    display: inline-block;
+  }
+  div.contact form div.email input {
+    width: 380px;
+    padding: 8px 10px;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  div.contact form textarea {
+    font-family: "Pretendard Variable";
+    width: 500px;
+    padding: 8px 10px;
+    height: 150px;
+    margin-bottom: 30px;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  div.contact input:focus, div.contact textarea:focus {
+    outline: 4px solid #FE8F96;
+  }
+  div.contact form button {
+    padding: 14px 20px 10px;
+    font-size: 25px;
+    border-radius: 4px;
+    color: white;
+    background-color: #e44458;
+    
+  }
+
+/* skills */
+  div.skills_container {
+    margin-top: 60px;
+  }
