--- a/src/App.css
+++ b/src/App.css
@@ -239,7 +239,7 @@ div.wrapper {
     justify-content: space-between;
     align-items: start;
     position: fixed;
-    height: 95vh;
+    height: auto;
     width: calc(100% - 100px);
     background-color: #FE8F96;
     padding: 30px;
@@ -249,7 +249,7 @@ div.wrapper {
     border-radius: 20px;
   }
   div.designmodal_container div.img_area {
-    max-width: 60%;
+    max-width: 40%;
     max-height: 100%;
     overflow: hidden;
     border-radius: 15px;
@@ -258,9 +258,11 @@ div.wrapper {
     width: 100%;
   }
   div.designmodal_container div.text_area {
-    width: 40%;
-    padding: 50px;
+    width: 60%;
+    padding: 20px;
     position: relative;
+    word-break: keep-all;
+    color: #150640;
   }
   div.designmodal_container > svg {
     font-size: 40px;
@@ -270,6 +272,7 @@ div.wrapper {
   }
   div.designmodal_container div.text_area h3.title {
     font-size: 30px;
+    margin-bottom: 10px;
   }
   div.designmodal_container div.text_area p.desc {
     font-family: "Pretendatd Variable";
