--- a/src/App_m.css
+++ b/src/App_m.css
@@ -169,11 +169,15 @@
             max-height: 90vh;
             overflow: scroll;
             padding: 20px;
+            padding: 10px;
+            padding: 70px 20px 40px;
         }
         div.designmodal_container div.img_area {
             width: 100%;
             margin: 0 auto 20px;
             border-radius: 10px;
+            max-width: 100%;
+            max-height: 100%;
         }
         div.designmodal_container div.text_area {
             width: 100%;
@@ -183,9 +187,10 @@
         }
         div.designmodal_container > svg {
             top: 20px; right: 20px;
+            font-size: 35px;
         }
         div.designmodal_container div.text_area div.text {
-            width: calc(100% - 50px);
+            width: 100%;
         }
         div.designmodal_container div.text_area h3.title {
             font-size: 25px;
