--- a/src/App.css
+++ b/src/App.css
@@ -252,6 +252,21 @@ div.wrapper {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: relative;
+    padding-top: 60px;
+  }
+  div.designcard_area > p {
+    position: absolute;
+    width: 100%;
+    text-align: center;
+    top: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: "Pretendard Variable", Pretendard;
+    font-size: 20px;
+    font-weight: 500;
+    background-color: #44358e;
+    padding: 20px 30px;
   }
   div.designcard {
     width: 49%;
@@ -270,7 +285,9 @@ div.wrapper {
     align-items: start;
     position: fixed;
     height: auto;
+    max-height: calc(100vh - 200px);
     width: calc(100% - 100px);
+    max-width: 800px;
     background-color: #FE8F96;
     padding: 30px;
     box-sizing: border-box;
@@ -279,13 +296,15 @@ div.wrapper {
     border-radius: 20px;
   }
   div.designmodal_container div.img_area {
-    max-width: 40%;
+    width: 40%;
     max-height: 100%;
     overflow: hidden;
     border-radius: 15px;
+    margin-right: 40px;
   }
   div.designmodal_container div.img_area > img {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     border-radius: inherit;
   }
   div.designmodal_container div.text_area {
@@ -300,6 +319,9 @@ div.wrapper {
     position: absolute;
     top: 30px; right: 30px;
     cursor: pointer
+  }
+  div.designmodal_container div.text_area {
+    margin-right: 20px;
   }
   div.designmodal_container div.text_area h3.title {
     font-size: 30px;
